RESOLVED FIXED210532
isNullFunctionPointer() can fail for symbols not explicitly marked as weakly linked.
https://bugs.webkit.org/show_bug.cgi?id=210532
Summary isNullFunctionPointer() can fail for symbols not explicitly marked as weakly ...
Jer Noble
Reported 2020-04-14 22:03:52 PDT
isNullFunctionPointer() can fail for symbols not explicitly marked as weakly linked.
Attachments
Patch (3.70 KB, patch)
2020-04-14 22:11 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2020-04-14 22:11:47 PDT
EWS
Comment 2 2020-04-15 08:32:25 PDT
Committed r260129: <https://trac.webkit.org/changeset/260129> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396499 [details].
Radar WebKit Bug Importer
Comment 3 2020-04-15 08:33:14 PDT
Sam Weinig
Comment 4 2020-04-15 08:45:19 PDT
I don't think this is the right approach for this. If we are going to change libWebRTC, I think we should add a non-function symbol to use to check weak-linkage. And we should remove isNullFunctionPointer() or fix it it, but not leave it half working (see https://bugs.webkit.org/show_bug.cgi?id=208873)
Note You need to log in before you can comment on or make changes to this bug.